# tsrpa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c_cpp_properties.json  tsrpa.h
examples_test/: hello_sdl3.cpp  hello_sdl3_dynamic_texture.cpp  hello_sdl3_image.cpp  hello_sdl3_render_atempt.cpp  image_loader.h  mesh_loader.h
examples_test/assets/: funy_cat.c
